--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ body{
     display: flex;
     transition: 0.5s;
 }
-
+body.active{
+    background-color: rgba(236, 232, 232, 0.959);
+}
 .button-space{
     width: 320px;
     height: 160px;
@@ -34,4 +36,15 @@ body{
     transition: 0.5s;
     box-shadow: inset 1px 1px 10px #00000000,
                 inset -1px 1px 10px #0000006b;
+}
+.button-space.active{
+    background-color: rgba(83, 83, 83, 0.055);
+    box-shadow: inset 1px 4px 10px #0000001a,
+                inset -1px -4px 10px #0000001a;
+}
+.button-space.active .button{
+    left: 160px;
+    background-color: rgb(238, 236, 236);
+    box-shadow: inset 1px 1px 10px #4e4e4e67,
+                inset -1px -1px 10px #c0c0c069;
 }
